--- a/style.css
+++ b/style.css
@@ -161,5 +161,12 @@ footer{
 
 
 
- 
+ .form-container{
+    display: flex;
+    height: 100vh;
+    margin: auto;
+ }
 
+ #contact-form{
+    margin: auto;
+ }
