--- a/style.css
+++ b/style.css
@@ -1,161 +1,177 @@
-body{
-    font-family: 'Roboto', sans-serif;
+*{
     margin: 0;
-    background: #C1CCFE;
+    padding: 0;
+}
+
+body{
+    position: relative;
+}
+
+h1, p, a, cite{
+    font-family: 'Roboto serif', sans-serif;
+}
+
+#logo{
+    height: 100px;
+}
+
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: black;
+}
+
+li{
+    list-style: none;
 }
 
 a{
-    text-decoration: none;
-}
-
-a:hover{
-    text-decoration: none;
-    color: black;
-}
-
-.container{
-    background-color: blue;
-    width: 80%;
-    margin: auto;
-}
-
-/* Navigation */
-
-nav{
-    height: 75px;
-    background: black;
-    width: 100%;
-    margin: 0;
-    position: fixed;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 16px 0 0;
-    box-sizing: border-box;
-    z-index: 100;
-}
-
-nav a{
-    padding: 0 32px;
+    font-size: 1.5rem;
     color: white;
-    transition: 0.4s; 
-}
-
-nav a:hover{
-    color: blue;
-}
-
-nav ul{
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    margin: 0;
+    text-decoration: none;
 }
 
 .active{
-    color: blue;
-}
-
-#logo-img{
-    display: flex;
-    height: 100%;
-    background: black;
-    padding: 0 32px;
-    align-items: center;
-    color: white;
-    transition: 0.4s;
-}
-
-#logo-img img{
-    height: 100px;
+    background-color: blue;
+    padding: 2.2rem 1.5rem;
     margin: 0;
 }
 
-#logo-img:hover{
-    background: black;
+.nav-menu a:hover{
+    border-bottom: 7px solid blue;
+    padding-bottom: 1.8rem;
 }
 
-#logo-img a{
+.container{
+    width: 1280px;
+    margin: auto;
+}
+
+.navbar{
+    width: 95%;
+    margin: auto;
+    height: 100px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-between;
 }
 
-/* Section */
-
-section{
+.nav-menu{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 75px;
+    align-items: center;
+    gap: 40px;
 }
 
-.intro p{
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 30px;
-    float: left;
-    display: block;
-    width: 50%;
-    padding: 0 15px;
+.brand{
+    widows: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-section img{
+.name{
+    color: white;
+    font-size: 2rem;
+    padding-left: 50px;
+}
+
+.main-section{
+    background-color: red;
+    width: 100%;
+    margin: 100px 60px 0px 60px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.container1{
+    background-color: green;
+    padding-left: 30px;
+    padding-right: 30px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.container2{
+    background-color: yellow;
+    margin-right: 60px;
+    /* width: 50%; */
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.container2 .image{
     width: 300px;
-    float: right;
-    padding: 20px;
+    height: 300px;
+    margin-top: 50px;
+    padding-left: 100px;
 }
 
-.quote{
-    font-family: 'Roboto Condensed', sans-serif;
+.container2 cite{
     font-size: 24px;
-    width: 75%;
-}
-
-.quote p cite{
-    float: right;
+    padding: 10px;
 }
 
 footer{
-    font-size: 28px;
-    background: black;
-    color: white;
-    padding: 8px;
-    text-align: center;
+    width: 100%;
+    background-color: black;
+    display: flex;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
 }
- footer ul{
+
+footer ul{
     display: flex;
     list-style: none;
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin: 0
- }
+    margin: 0;
+}
 
- #social-media a .fa-facebook-square,
- .fa-linkedin-in, .fa-github{
+.fa-facebook-square,
+ .fa-linkedin-in, .fa-github-square{
     font-size: 48px;
     padding: 16px;
     color: white;
     transition: 0.4s;
-    
  }
 
- #social-media ul li:hover a .fa-facebook-square{
+ a:hover .fa-facebook-square{
     color: blue;
  }
 
- #social-media ul li:hover a .fa-linkedin-in{
+ a:hover .fa-linkedin-in{
     color: #3B5998;
  }
 
- #social-media ul li:hover a .fa-github{
+ a:hover .fa-github-square{
     color: #BBB;
  }
 
+footer li{
+    display: flex;
+    gap: 40px;
+}
 
 
- 
 
+
+
+
+@media(max-width: 1200px){
+    .container{
+        width: 100%;
+    }
+}
+
+/* 
+
+
+
+*/
