--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ input, textarea{
     background: rgba(255, 255, 255, 0.05);
     padding: 10px, 16px;
     border-radius: 20px;
-    border: 2px solid #9893d8;
+    border: 2px solid gold;
     color: #f2f2f2;
 }
 
@@ -86,7 +86,6 @@ nav .brand{
 }
 
 header{
-    /* display: flex; */
     background: black;
     position: fixed;
 }
@@ -96,7 +95,7 @@ header{
 }
 
 .site-nav ul{
-    display: grid;
+    display: none;
     grid-column: 6/8;
 }
 
@@ -105,7 +104,7 @@ header{
     justify-self: center;
     align-self: center;
     padding-bottom: 10px;
-    border-bottom: 3px solid red;
+    border-bottom: 3px solid gold;
 }
 
 #welcome{
@@ -130,7 +129,7 @@ header{
 }
 
 .welcome-quote{
-    grid-column: 5/9;
+    grid-column: 3/8;
     grid-row: 3;
     /* align-self: right ; */
 }
@@ -144,8 +143,9 @@ header{
 }
 
 #about{
-    grid-row: 4;
-    grid-column: span 8;
+    /* grid-row: 4;
+    grid-column: span 8; */
+    display: block;
 }
 
 #about img{
@@ -163,7 +163,8 @@ header{
 
 .about-img img{
     grid-column: span 4;
-    width: 50%;
+    width: 60%;
+    float: right;
 }
 
 #portfolio{
@@ -230,14 +231,15 @@ footer li{
 }
 
 footer .follow-me{
-    grid-column: 1/4;
+    color: gold;
+    grid-column: 2/5;
     font-size: 0.8em;
     align-self: center;
 }
 
 footer .social{
     display: flex;
-    grid-column: 4/9;
+    grid-column: 5/8;
     font-size: 2em;
 }
 
@@ -260,17 +262,178 @@ footer .social{
 
 
 
-
-
 /* Small Tablet Styles */
-@media screen and (min-width: 620px) {
+@media screen and (min-width: 768px) {
+    cite{
+        font-size: 1.5em;
+    }
+
+    h1, h3{
+        font-size: 1.2em;
+    }
     
+    h2{
+        font-size: 2em;
+    }
+    
+    h4{
+        font-size: 1.1em;
+    }
+
+    #portfolio h3{
+        font-size: 2em;
+    }
+
+    #contact h3{
+        font-size: 2em;
+    }
+
+    .leading{
+        font-size: 1.4em;
+    }
+
+    #about h3{
+        font-size: 2em;
+    }
+
+    #about p{
+        font-size: 1.3em;
+    }
+
+    .nav-menu{
+        font-size: 1.2em;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 12px;
+    }
+
+    .site-nav ul{
+        display: flex;
+        grid-column: 5/8;
+    }
+
+    .active{
+        background-color: blue;
+        padding: 2.5rem 1rem;
+        margin: 0;
+    }
+
+    .nav-menu a:hover{
+        border-bottom: 3px solid gold;
+        padding-bottom: .5rem;
+    }
+
+    #welcome{
+        padding: 20px;
+        height: 75vh;
+    }
+    
+    .welcome-text{
+        grid-column: 1/5;
+        grid-row: 2;
+    }
+    
+    .about-section .grid{
+        display: grid;
+        grid-column: 1/8;
+    }
+    
+    footer .grid{
+        display: grid;
+        /* grid-column: ; */
+    }
+
+    footer .grid p{
+        grid-column: 2/4;
+        font-size: 1.5em;
+    }
+
+    .follow-me{
+        font-size: 2em;
+    }
 } 
 
+
+
 /* Large Tablet and Laptop Styles */
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 820px) {
     body{
         font-size: 18px;
+    }
+
+    cite{
+        font-size: 1.5em;
+    }
+
+    h1, h3{
+        font-size: 1.2em;
+    }
+    
+    h2{
+        font-size: 2em;
+    }
+    
+    h4{
+        font-size: 1.1em;
+    }
+
+    .leading{
+        font-size: 1.4em;
+    }
+
+    #welcome{
+        padding: 20px;
+        height: 75vh;
+    }
+    
+    .welcome-text{
+        grid-column: 1/5;
+        grid-row: 2;
+    }
+
+    #about h3{
+        font-size: 2em;
+    }
+
+    .about-section .grid{
+        display: grid;
+        grid-column: 1/8;
+    }
+
+    #about p{
+        font-size: 1.3em;
+    }
+
+    #portfolio h3{
+        font-size: 2em;
+    }
+
+    #portfolio h4{
+        font-size: 1.3em;
+    }
+
+    #contact h3{
+        font-size: 2em;
+    }
+
+    #contact p{
+        font-size: 1.3em;
+    }
+
+    .follow-me{
+        font-size: 2em;
+    }
+    
+    footer .grid{
+        display: grid;
+        /* grid-column: ; */
+    }
+    
+    footer .grid p{
+        grid-column: 2/4;
+        font-size: 1.5em;
+
     }
 } 
 
@@ -278,6 +441,89 @@ footer .social{
 @media screen and (min-width: 1200px) {
     body{
         font-size: 20px;
+    }
+
+    header{
+        width: 100%;
+    }
+
+    .site-nav ul{
+        display: flex;
+        grid-column: 6/8;
+    }
+
+    cite{
+        font-size: 1.5em;
+    }
+
+    h1, h3{
+        font-size: 1.2em;
+    }
+    
+    h2{
+        font-size: 2em;
+    }
+    
+    h4{
+        font-size: 1.1em;
+    }
+
+    .leading{
+        font-size: 1.4em;
+    }
+
+    #welcome{
+        padding: 20px;
+        height: 75vh;
+    }
+    
+    .welcome-text{
+        grid-column: 1/5;
+        grid-row: 2;
+    }
+
+    #about h3{
+        font-size: 2em;
+    }
+
+    .about-section .grid{
+        display: grid;
+        grid-column: 1/8;
+    }
+
+    #about p{
+        font-size: 1.3em;
+    }
+
+    #portfolio h3{
+        font-size: 2em;
+    }
+
+    #portfolio h4{
+        font-size: 1.3em;
+    }
+
+    #contact h3{
+        font-size: 2em;
+    }
+
+    #contact p{
+        font-size: 1.3em;
+    }
+
+    .follow-me{
+        font-size: 2em;
+    }
+    
+    footer .grid{
+        display: grid;
+        /* grid-column: ; */
+    }
+    
+    footer .grid p{
+        grid-column: 2/4;
+        font-size: 1.5em;
+
     }
 } 
 
@@ -342,21 +588,10 @@ a{
     text-decoration: none;
 }
 
-.active{
-    background-color: blue;
-    padding: 2.2rem 1.5rem;
-    margin: 0;
-}
-
 .active a{
     background-color: blue;
     padding: 2.2rem 1.5rem;
     margin: 0;
-}
-
-.nav-menu a:hover{
-    border-bottom: 7px solid blue;
-    padding-bottom: 1.8rem;
 }
 
 .container{
@@ -372,13 +607,6 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.nav-menu{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 40px;
 }
 
 .brand{
